--- a/Titanic/TASK2.ipynb
+++ b/Titanic/TASK2.ipynb
@@ -1779,14 +1779,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the training data is: 0.7821229050279329\n"
+      "Accuracy on the test data is: 0.7821229050279329\n"
      ]
     }
    ],
    "source": [
     "#accuracy on the test data\n",
     "test_data_accuracy=accuracy_score(y_test,x_test_prediction)\n",
-    "print(\"Accuracy on the training data is:\",test_data_accuracy)"
+    "print(\"Accuracy on the test data is:\",test_data_accuracy)"
    ]
   },
   {
@@ -1799,7 +1799,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy percentage on the training data is: 78.2122905027933 %\n"
+      "Accuracy percentage on the test data is: 78.2122905027933 %\n"
      ]
     }
    ],
@@ -1808,7 +1808,7 @@
     "test_data_accuracy_percentage = test_data_accuracy * 100\n",
     "\n",
     "# Print the accuracy on the training data\n",
-    "print(\"Accuracy percentage on the training data is:\", test_data_accuracy_percentage, \"%\")"
+    "print(\"Accuracy percentage on the test data is:\", test_data_accuracy_percentage, \"%\")"
    ]
   },
   {
